--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_calendar_week: ^3.0.0
   syncfusion_flutter_calendar: ^23.1.44
   intl: ^0.18.0
+  multi_select_flutter: ^4.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
